--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ button {
     transition: background-color 0.2s, transform 0.1s, color 0.2s;
     flex-grow: 1;
     text-align: center;
+    white-space: nowrap;
 }
 
 button:hover {
